[package]
name = "apache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono ="0.4"
url = "2.4.0"
maxminddb ="0.17.0"
uaparser = "0.6.0"
serde_json = "1.0.99"
opensearch = "1.0.0"
serde = "~1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5"
once_cell ="1.9"
onig = "6.4.0"
futures = "0.3.5"
dotenv = "0.15.0"
minio-rsc = "0.1.5"
tokio-util = "0.7.8"
bytes = "1.0"
flate2 = "1.0.26"
async-compression = "0.4.1"

[build-dependencies]
glob = "0.3.1"
